# Battlefuel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Idea.docx  Makefile  README.md  TODO.md  compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_enable_postgis.py  0002_create_tiles.py  0004_enable_pgrouting.py  (+13 more)
backend/app/: __init__.py  config.py  db.py  main.py
backend/scripts/: annotate_routing.py  build_basemap.sh  build_routing_graph.sh  generate_tiles.py  import_osm_to_postgis.sh  reset_road_conditions.py  seed_supply.py  seed_threats.py  seed_unit_instances.py  startup_data.py
backend/tests/: test_advice_foundation.py  test_buy_orders.py  test_combat_events.py  test_cost_model.py  test_db_foundation.py  test_enemy_danger.py  test_enemy_units.py  test_event_engine.py  test_frontline.py  test_fuel_platforms.py  test_fuel_runs.py  test_move_orders.py  test_move_refuel.py  test_movement_advisor.py  test_obstacles.py  test_provider_factory.py  test_redistribution.py  test_refuel_optimizer.py  test_refuel_orders.py  test_rendezvous.py  test_rendezvous_schedule.py  test_route_planner.py  test_route_planning.py  test_routing.py  test_seed_catalog.py  test_sim.py  test_strategic_feed.py  test_supply.py  test_supply_api.py  test_terrain_router.py  test_theater_api.py  test_theater_basemap.py  test_tile_feed.py  test_tile_mutation.py  test_tiles.py  test_unit_instances.py  test_unit_model.py  test_unit_telemetry.py  test_units_api.py
(+361 files in other folders)
